// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog default renders as hidden 1`] = `null`;

exports[`Dialog default renders as visible when \`showDialog\` is set to \`true\` 1`] = `
.c4 {
  vertical-align: middle;
}

.c3 {
  position: absolute;
  top: 1rem;
  right: 1rem;
  padding: 0.5rem;
  vertical-align: middle;
  font-size: 0.5rem;
  line-height: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #8697A2;
  border-radius: 6.25rem;
  border: 1px solid;
  border-color: transparent;
  background-color: #1A212A;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0.125rem 0.125rem #0CD664;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:disabled,
.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
  background-color: rgba(26,33,42,0.75);
  z-index: 10000;
}

.c1 {
  margin: 0 auto;
  position: relative;
  max-width: 38rem;
  padding: 1rem;
  outline: none;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  outline: none;
  border-radius: 0.25rem;
  color: #FFFFFF;
  background: #232A33;
  box-shadow: 0 1rem 2rem rgba(0,0,0,0.5);
}

.c6 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

@media (min-width:50em) {
  .c6 {
    padding-top: 2.5rem;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-bottom: 2rem;
  }
}

<div>
  <div
    style={Object {}}
  >
    <div
      onScrollCapture={[Function]}
      onTouchMoveCapture={[Function]}
      onWheelCapture={[Function]}
    >
      <div
        className="c0"
        data-reach-dialog-overlay={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
      >
        <div
          aria-modal="true"
          className="c1"
          data-reach-dialog-content={true}
          onClick={[Function]}
          position="CENTER"
          tabIndex="-1"
        >
          <div
            className="c2"
          >
            <button
              className="c3"
              type="button"
            >
              <svg
                className="c4"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.609 10L20 17.391 17.391 20 10 12.609 2.609 20 0 17.391 7.391 10 0 2.609 2.609 0 10 7.391 17.391 0 20 2.609z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
              <span
                className="c5"
              >
                Close dialog
              </span>
            </button>
            <main
              className="c6"
            >
              <h1>
                Lorem ipsum dolor sit amet.
              </h1>
              <p>
                Consectetur adipiscing elit. Phasellus eget vulputate nibh, nec laoreet lectus. Proin at lacus quis justo mattis porta. Nulla sed nisl volutpat, varius enim eu, semper augue.
              </p>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with custom \`maxWidth\` 1`] = `
.c4 {
  vertical-align: middle;
}

.c3 {
  position: absolute;
  top: 1rem;
  right: 1rem;
  padding: 0.5rem;
  vertical-align: middle;
  font-size: 0.5rem;
  line-height: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #8697A2;
  border-radius: 6.25rem;
  border: 1px solid;
  border-color: transparent;
  background-color: #1A212A;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0.125rem 0.125rem #0CD664;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:disabled,
.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
  background-color: rgba(26,33,42,0.75);
  z-index: 10000;
}

.c1 {
  margin: 0 auto;
  position: relative;
  max-width: 38rem;
  padding: 1rem;
  outline: none;
  max-width: 400;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  outline: none;
  border-radius: 0.25rem;
  color: #FFFFFF;
  background: #232A33;
  box-shadow: 0 1rem 2rem rgba(0,0,0,0.5);
}

.c6 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

@media (min-width:50em) {
  .c6 {
    padding-top: 2.5rem;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-bottom: 2rem;
  }
}

<div>
  <div
    style={Object {}}
  >
    <div
      onScrollCapture={[Function]}
      onTouchMoveCapture={[Function]}
      onWheelCapture={[Function]}
    >
      <div
        className="c0"
        data-reach-dialog-overlay={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
      >
        <div
          aria-modal="true"
          className="c1"
          data-reach-dialog-content={true}
          maxWidth="400"
          onClick={[Function]}
          position="CENTER"
          tabIndex="-1"
        >
          <div
            className="c2"
          >
            <button
              className="c3"
              type="button"
            >
              <svg
                className="c4"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.609 10L20 17.391 17.391 20 10 12.609 2.609 20 0 17.391 7.391 10 0 2.609 2.609 0 10 7.391 17.391 0 20 2.609z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
              <span
                className="c5"
              >
                Close dialog
              </span>
            </button>
            <main
              className="c6"
            >
              <h1>
                Lorem ipsum dolor sit amet.
              </h1>
              <p>
                Consectetur adipiscing elit. Phasellus eget vulputate nibh, nec laoreet lectus. Proin at lacus quis justo mattis porta. Nulla sed nisl volutpat, varius enim eu, semper augue.
              </p>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
